--- a/aoc2020/aoc2020.cabal
+++ b/aoc2020/aoc2020.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 66259d5106dcc0f12b347520dc13bcc27f5a1f7025afb1aa6d5f714fa65ccabe
+-- hash: 063f167e0f26cbfa026ff153ed27e7deb11cc10be8bd786aebb4e40eb12d2625
 
 name:           aoc2020
 version:        0.1.0.0
@@ -30,6 +30,7 @@ library
       Day1
       Day2
       Day3
+      Day4
       Import
       Run
       Types
@@ -43,6 +44,7 @@ library
       attoparsec
     , base >=4.11 && <10
     , rio >=0.1.12.0
+    , text
   default-language: Haskell2010
 
 executable aoc2020-exe
@@ -58,6 +60,7 @@ executable aoc2020-exe
     , base >=4.11 && <10
     , optparse-simple
     , rio >=0.1.12.0
+    , text
   default-language: Haskell2010
 
 test-suite aoc2020-test
@@ -75,4 +78,5 @@ test-suite aoc2020-test
     , base >=4.11 && <10
     , hspec
     , rio >=0.1.12.0
+    , text
   default-language: Haskell2010
