--- a/aoc2020/aoc2020.cabal
+++ b/aoc2020/aoc2020.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: ffc0ab4318fa68a2911eb8b03325c1a0c20b258de8a9b4bd836a2dc7af2fc5db
+-- hash: 61a767e83b00543eec0bf69f9c2948601a0e6da99320da78b414332800f305cc
 
 name:           aoc2020
 version:        0.1.0.0
@@ -32,6 +32,7 @@ library
       Day3
       Day4
       Day5
+      Day6
       Import
       Run
       Types
@@ -44,6 +45,7 @@ library
   build-depends:
       attoparsec
     , base >=4.11 && <10
+    , containers
     , rio >=0.1.12.0
     , text
   default-language: Haskell2010
@@ -59,6 +61,7 @@ executable aoc2020-exe
       aoc2020
     , attoparsec
     , base >=4.11 && <10
+    , containers
     , optparse-simple
     , rio >=0.1.12.0
     , text
@@ -77,6 +80,7 @@ test-suite aoc2020-test
       aoc2020
     , attoparsec
     , base >=4.11 && <10
+    , containers
     , hspec
     , rio >=0.1.12.0
     , text
