--- a/aoc2020/aoc2020.cabal
+++ b/aoc2020/aoc2020.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: ce8029b5d656f166ed2bb0d84a043ead9738a22028b6bb5368101cef64412abc
+-- hash: 7371a3f2d7a86149eb0aed9da03b5b4ecab457e5f63909f11d1acec9572db1a7
 
 name:           aoc2020
 version:        0.1.0.0
@@ -29,6 +29,7 @@ library
   exposed-modules:
       Day1
       Day10
+      Day11
       Day2
       Day3
       Day4
@@ -54,6 +55,7 @@ library
     , rio >=0.1.12.0
     , split
     , text
+    , vector
   default-language: Haskell2010
 
 executable aoc2020-exe
@@ -73,6 +75,7 @@ executable aoc2020-exe
     , rio >=0.1.12.0
     , split
     , text
+    , vector
   default-language: Haskell2010
 
 test-suite aoc2020-test
@@ -94,4 +97,5 @@ test-suite aoc2020-test
     , rio >=0.1.12.0
     , split
     , text
+    , vector
   default-language: Haskell2010
