--- a/aoc2020/aoc2020.cabal
+++ b/aoc2020/aoc2020.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 09d490cbfd0e6d9fd475860f3d13aacd6eb4521fb29632709699f7f0ceb9df5f
+-- hash: 72b8fa7e29dd19f7224236306e589c7994babd17bc15245b8fc7ddb1fea619e5
 
 name:           aoc2020
 version:        0.1.0.0
@@ -32,6 +32,8 @@ library
       Day11
       Day12
       Day13
+      Day14
+      Day15
       Day2
       Day3
       Day4
