--- a/aoc2020/aoc2020.cabal
+++ b/aoc2020/aoc2020.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: f38139325a863e57b5f94a253aafe00bc1739469b22e495c488b8152424f8576
+-- hash: 25ed98940645c7d4eb78edc6e629d57c69c45e90ac5a66b2db807f6aeaa89493
 
 name:           aoc2020
 version:        0.1.0.0
@@ -35,6 +35,7 @@ library
       Day14
       Day15
       Day16
+      Day17
       Day2
       Day3
       Day4
